--- a/web/resultado.html
+++ b/web/resultado.html
@@ -27,10 +27,6 @@
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
   <link rel="shortcut icon" href="img/favicon.png">
-  <link rel="stylesheet" href="resources/css/style.css" type="text/css"/>
-  <link rel="stylesheet" href="resources/css/bootstrap.css" type="text/css">
-
-
   
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -43,11 +39,11 @@
 			<div class="span8 offset2">
 				<div id="titulo_jogo" class="hero-unit">
 					<small>Resultado da aposta</small>
-					<h1>Brasil X Chile</h1>
+					<h1>Seleção 1 X Seleção 2</h1>
 				</div>
 				<div class="row negrito">
 					<div class="span4">
-						Aposta: 2
+						Aposta: 2 
 					</div>
 					<div class="span4">
 						1
