--- a/web/tabelajogos.html
+++ b/web/tabelajogos.html
@@ -1,4 +1,4 @@
-<table class="table table-hover table-bordered">
+﻿<table class="table table-hover table-bordered">
 				<thead>
 					<tr>
 						<th>
@@ -14,31 +14,23 @@
 				</thead>
 				<tbody>
 					<tr onclick="window.location = './jogos.html';">
-						<td>Brasil X Chile
+						<td>Seleção 1 X Seleção 2
 						</td>
 						<td>
 						</td>
 						<td>
 						</td>
 					</tr>
-					<tr class="success"  onclick="window.location = './resultado.html';">
-						<td>Japão 2 x 1 Uruguai
+					<tr onclick="window.location = './resultado.html';">
+						<td>Seleção 1 X Seleção 2
 						</td>
 						<td>
 						</td>
 						<td>
 						</td>
 					</tr>
-					<tr class="info">
-						<td>
-						</td>
-						<td>
-						</td>
-						<td>
-						</td>
-					</tr>
-					<tr>
-						<td>
+					<tr >
+						<td>Seleção 1 X Seleção 2
 						</td>
 						<td>
 						</td>
@@ -46,7 +38,15 @@
 						</td>
 					</tr>
 					<tr>
+						<td>Seleção 1 X Seleção 2
+						</td>
 						<td>
+						</td>
+						<td>
+						</td>
+					</tr>
+					<tr>
+						<td>Seleção 1 X Seleção 2
 						</td>
 						<td>
 						</td>
